--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@apollo/client": "^4.0.13",
+    "apollo-server-micro": "^3.13.0",
+    "graphql": "^16.12.0",
+    "graphql-tag": "^2.12.6",
     "next": "16.1.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
