wip: add components and layout

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-server": "^3.13.0",
     "apollo-server-micro": "^3.13.0",
     "dotenv": "^17.2.3",
+    "framer-motion": "^12.26.2",
     "graphql": "^16.12.0",
     "graphql-tag": "^2.12.6",
     "next": "16.1.2",
@@ -28,10 +29,12 @@
     "@types/node": "^20.19.29",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.23",
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
     "jest": "^30.2.0",
-    "tailwindcss": "^4",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18",
     "ts-jest": "^29.4.6",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.3"
