--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest"
   },
   "dependencies": {
-    "@apollo/client": "^4.0.13",
     "@apollo/server": "^5.2.0",
     "@as-integrations/next": "^4.1.0",
     "@supabase/supabase-js": "^2.90.1",
@@ -24,7 +24,10 @@
     "react-dom": "19.2.3"
   },
   "devDependencies": {
+    "@apollo/client": "^4.1.0",
     "@tailwindcss/postcss": "^4",
+    "@testing-library/jest-dom": "^6.9.1",
+    "@testing-library/react": "^16.3.1",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.19.29",
     "@types/react": "^19",
@@ -33,6 +36,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
     "jest": "^30.2.0",
+    "jest-environment-jsdom": "^30.2.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
     "ts-jest": "^29.4.6",
